MB-58333: Handle SystemEvent::Scope in isLogicallyDeleted

Change-Id: I1f7de7f7f208bd44df9fd8baffaba78dd0275bf2
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/195829
Tested-by: Jim Walker <jim@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>